# diskr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  bulkstat.rs  fs_ops.rs  fsevents.rs  history.rs  keymap.rs  main.rs  packages.rs  pool.rs  reclaim.rs  scanner.rs  space.rs  state.rs  terminal_backend.rs  ui.rs
