[package]
name = "diskr"
version = "0.1.0"
edition = "2021"
authors = ["Milo Evans"]
description = "Lightweight terminal file explorer and disk/storage manager for macOS"
license = "MIT"
repository = "https://github.com/milobeans/diskr"
homepage = "https://github.com/milobeans/diskr"
readme = "README.md"
keywords = ["disk", "storage", "tui", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1"
trash = "5"                # move-to-trash instead of hard delete (safer on macOS)
libc = "0.2"               # macOS getattrlistbulk/open/close FFI
