[package]
name = "diskr"
version = "0.1.63"
edition = "2021"
rust-version = "1.88"
authors = ["Milo Evans"]
description = "Lightweight terminal file explorer and disk/storage manager for macOS"
license = "MIT"
repository = "https://github.com/milobeans/diskr"
homepage = "https://github.com/milobeans/diskr"
readme = "README.md"
keywords = ["disk", "storage", "tui", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
ratatui-core = { version = "0.1", features = ["std"] }
ratatui-widgets = { version = "0.3", default-features = false }
crossterm = { version = "0.28", default-features = false, features = ["events"] }
anyhow = "1"
libc = "0.2" # macOS getattrlistbulk/open/close FFI
serde_json = "1"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
